// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipeImage renders as expected  1`] = `
<Image
  alt="A recipe image"
  fallback={
    <Flex
      alignItems="center"
      background="var(--chakra-colors-light-background)"
      height={
        [
          "100%",
        ]
      }
      justifyContent="center"
      objectFit="cover"
      p={1}
      width="100%"
    >
      <Image
        alt="Chop Chop Logo"
        height="75%"
        src="/images/logo.png"
        width={
          [
            "100%",
          ]
        }
      />
    </Flex>
  }
  maxHeight={
    [
      "100%",
    ]
  }
  objectFit="cover"
  src="/test"
  width="100%"
/>
`;

exports[`RecipeImage renders with default props  1`] = `
<Image
  alt="A recipe image"
  fallback={
    <Flex
      alignItems="center"
      background="var(--chakra-colors-light-background)"
      height={
        [
          "200px",
          "300px",
          "400px",
        ]
      }
      justifyContent="center"
      objectFit="cover"
      p={1}
      width="100%"
    >
      <Image
        alt="Chop Chop Logo"
        height="75%"
        src="/images/logo.png"
        width={[]}
      />
    </Flex>
  }
  maxHeight={
    [
      "200px",
      "300px",
      "400px",
    ]
  }
  objectFit="cover"
  src="/test"
  width="100%"
/>
`;
